Descripción de los cambios en el submódulo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "Samus",
+  "author": "Steve",
   "license": "ISC",
   "dependencies": {
     "api": "^4.1.0",
